@@ -44,7 +44,7 @@ of current line."
 (eval-when-compile (require 'info))
 
 (defun py-info-lookup-symbol ()
-  (interactive) 
+  (interactive)
   "Calls `info-lookup-symbol'.
 
 Sends help if stuff is missing. "
@@ -134,7 +134,7 @@ Used with `eval-after-load'."
 	 ("(python-lib)Miscellaneous Index"))))))
 
 ;; (if (featurep 'info-look)
-;;     (python-after-info-look))  
+;;     (python-after-info-look))
 
 ;; (eval-after-load "info-look" '(python-after-info-look))
 
@@ -265,6 +265,7 @@ Optional \\[universal-argument] used for debugging, will prevent deletion of tem
 (defun py-dump-help-string (str)
   (with-output-to-temp-buffer "*Help*"
     (let ((locals (buffer-local-variables))
+          (comint-vars-p (eq major-mode 'comint-mode))
           funckind funcname func funcdoc
           (start 0) mstart end
           keys)
@@ -301,10 +302,10 @@ Optional \\[universal-argument] used for debugging, will prevent deletion of tem
         (princ funcdoc)
         (terpri)
         (setq start end))
-      (princ (substitute-command-keys (substring str start))))
+      (princ (substitute-command-keys (substring str start)))
+      (and comint-vars-p (py--princ-comint-variable-setting-intern)))
     (if (featurep 'xemacs) (print-help-return-message)
-      (help-print-return-message))
-    ))
+      (help-print-return-message))))
 
 (defun py-describe-mode ()
   "Dump long form of `python-mode' docs."
@@ -554,6 +555,165 @@ the Elisp manual for details.
 Obscure:  When python-mode is first loaded, it looks for all bindings
 to newline-and-indent in the global keymap, and shadows them with
 local bindings to py-newline-and-indent."))
+
+(defun py--princ-comint-variable-setting-intern ()
+  (princ "\n\n")
+  (princ "Some comint-mode variables of interest:\n\n")
+  (princ (concat "comint-accum-marker" " --> " (prin1-to-string comint-accum-marker) "\n"))
+  (princ (concat "comint-buffer-maximum-size" " --> " (prin1-to-string comint-buffer-maximum-size) "\n"))
+  (princ (concat "comint-completion-addsuffix" " --> " (prin1-to-string comint-completion-addsuffix) "\n"))
+  (princ (concat "comint-completion-autolist" " --> " (prin1-to-string comint-completion-autolist) "\n"))
+  (princ (concat "comint-completion-fignore" " --> " (prin1-to-string comint-completion-fignore) "\n"))
+  (princ (concat "comint-completion-recexact" " --> " (prin1-to-string comint-completion-recexact) "\n"))
+  (princ (concat "comint-delimiter-argument-list" " --> " (prin1-to-string comint-delimiter-argument-list) "\n"))
+  (princ (concat "comint-displayed-dynamic-completions" " --> " (prin1-to-string comint-displayed-dynamic-completions) "\n"))
+  (princ (concat "comint-dynamic-complete-functions" " --> " (prin1-to-string comint-dynamic-complete-functions) "\n"))
+  (princ (concat "comint-dynamic-list-completions-config" " --> " (prin1-to-string comint-dynamic-list-completions-config) "\n"))
+  (princ (concat "comint-eol-on-send" " --> " (prin1-to-string comint-eol-on-send) "\n"))
+  (princ (concat "comint-exec-hook" " --> " (prin1-to-string comint-exec-hook) "\n"))
+  (princ (concat "comint-file-name-chars" " --> " (prin1-to-string comint-file-name-chars) "\n"))
+  (princ (concat "comint-file-name-prefix" " --> " (prin1-to-string comint-file-name-prefix) "\n"))
+  (princ (concat "comint-file-name-quote-list" " --> " (prin1-to-string comint-file-name-quote-list) "\n"))
+  (princ (concat "comint-get-old-input" " --> " (prin1-to-string comint-get-old-input) "\n"))
+  (princ (concat "comint-history-isearch" " --> " (prin1-to-string comint-history-isearch) "\n"))
+  (princ (concat "comint-history-isearch-message-overlay" " --> " (prin1-to-string comint-history-isearch-message-overlay) "\n"))
+  (princ (concat "comint-inhibit-carriage-motion" " --> " (prin1-to-string comint-inhibit-carriage-motion) "\n"))
+  (princ (concat "comint-input-autoexpand" " --> " (prin1-to-string comint-input-autoexpand) "\n"))
+  (princ (concat "comint-input-filter" " --> " (prin1-to-string comint-input-filter) "\n"))
+  (princ (concat "comint-input-filter-functions" " --> " (prin1-to-string comint-input-filter-functions) "\n"))
+  (princ (concat "comint-input-history-ignore" " --> " (prin1-to-string comint-input-history-ignore) "\n"))
+  (princ (concat "comint-input-ignoredups" " --> " (prin1-to-string comint-input-ignoredups) "\n"))
+  ;; (princ (concat "comint-input-ring" " --> " (prin1-to-string comint-input-ring) "\n"))
+  (princ (concat "comint-input-ring-file-name" " --> " (prin1-to-string comint-input-ring-file-name) "\n"))
+  (princ (concat "comint-input-ring-index" " --> " (prin1-to-string comint-input-ring-index) "\n"))
+  (princ (concat "comint-input-ring-separator" " --> " (prin1-to-string comint-input-ring-separator) "\n"))
+  (princ (concat "comint-input-ring-size" " --> " (prin1-to-string comint-input-ring-size) "\n"))
+  (princ (concat "comint-input-sender" " --> " (prin1-to-string comint-input-sender) "\n"))
+  (princ (concat "comint-input-sender-no-newline" " --> " (prin1-to-string comint-input-sender-no-newline) "\n"))
+  (princ (concat "comint-insert-previous-argument-last-index" " --> " (prin1-to-string comint-insert-previous-argument-last-index) "\n"))
+  (princ (concat "comint-insert-previous-argument-last-start-pos" " --> " (prin1-to-string comint-insert-previous-argument-last-start-pos) "\n"))
+  (princ (concat "comint-last-input-end" " --> " (prin1-to-string comint-last-input-end) "\n"))
+  (princ (concat "comint-last-input-start" " --> " (prin1-to-string comint-last-input-start) "\n"))
+  (princ (concat "comint-last-output-start" " --> " (prin1-to-string comint-last-output-start) "\n"))
+  (princ (concat "comint-last-prompt-overlay" " --> " (prin1-to-string comint-last-prompt-overlay) "\n"))
+  (princ (concat "comint-matching-input-from-input-string" " --> " (prin1-to-string comint-matching-input-from-input-string) "\n"))
+  ;; (princ (concat "comint-mode-abbrev-table" " --> " (prin1-to-string comint-mode-abbrev-table) "\n"))
+  (princ (concat "comint-mode-hook" " --> " (prin1-to-string comint-mode-hook) "\n"))
+  ;; (princ (concat "comint-mode-map" " --> " (prin1-to-string comint-mode-map) "\n"))
+  ;; (princ (concat "comint-mode-syntax-table" " --> " (prin1-to-string comint-mode-syntax-table) "\n"))
+  (princ (concat "comint-move-point-for-output" " --> " (prin1-to-string comint-move-point-for-output) "\n"))
+  (princ (concat "comint-output-filter-functions" " --> " (prin1-to-string comint-output-filter-functions) "\n"))
+  (princ (concat "comint-password-prompt-regexp" " --> " (prin1-to-string comint-password-prompt-regexp) "\n"))
+  (princ (concat "comint-preoutput-filter-functions" " --> " (prin1-to-string comint-preoutput-filter-functions) "\n"))
+  (princ (concat "comint-process-echoes" " --> " (prin1-to-string comint-process-echoes) "\n"))
+  (princ (concat "comint-prompt-read-only" " --> " (prin1-to-string comint-prompt-read-only) "\n"))
+  (princ (concat "comint-prompt-regexp" " --> " (prin1-to-string comint-prompt-regexp) "\n"))
+  (princ (concat "comint-ptyp" " --> " (prin1-to-string comint-ptyp) "\n"))
+  (princ (concat "comint-redirect-completed" " --> " (prin1-to-string comint-redirect-completed) "\n"))
+  (princ (concat "comint-redirect-echo-input" " --> " (prin1-to-string comint-redirect-echo-input) "\n"))
+  (princ (concat "comint-redirect-filter-functions" " --> " (prin1-to-string comint-redirect-filter-functions) "\n"))
+  (princ (concat "comint-redirect-finished-regexp" " --> " (prin1-to-string comint-redirect-finished-regexp) "\n"))
+  (princ (concat "comint-redirect-insert-matching-regexp" " --> " (prin1-to-string comint-redirect-insert-matching-regexp) "\n"))
+  (princ (concat "comint-redirect-original-filter-function" " --> " (prin1-to-string comint-redirect-original-filter-function) "\n"))
+  (princ (concat "comint-redirect-original-mode-line-process" " --> " (prin1-to-string comint-redirect-original-mode-line-process) "\n"))
+  (princ (concat "comint-redirect-output-buffer" " --> " (prin1-to-string comint-redirect-output-buffer) "\n"))
+  (princ (concat "comint-redirect-perform-sanity-check" " --> " (prin1-to-string comint-redirect-perform-sanity-check) "\n"))
+  (princ (concat "comint-redirect-subvert-readonly" " --> " (prin1-to-string comint-redirect-subvert-readonly) "\n"))
+  (princ (concat "comint-redirect-verbose" " --> " (prin1-to-string comint-redirect-verbose) "\n"))
+  (princ (concat "comint-save-input-ring-index" " --> " (prin1-to-string comint-save-input-ring-index) "\n"))
+  (princ (concat "comint-scroll-show-maximum-output" " --> " (prin1-to-string comint-scroll-show-maximum-output) "\n"))
+  (princ (concat "comint-scroll-to-bottom-on-input" " --> " (prin1-to-string comint-scroll-to-bottom-on-input) "\n"))
+  (princ (concat "comint-scroll-to-bottom-on-output" " --> " (prin1-to-string comint-scroll-to-bottom-on-output) "\n"))
+  (princ (concat "comint-stored-incomplete-input" " --> " (prin1-to-string comint-stored-incomplete-input) "\n"))
+  (princ (concat "comint-use-prompt-regexp" " --> " (prin1-to-string comint-use-prompt-regexp) "\n"))
+  (princ (concat "comint-use-prompt-regexp-instead-of-fields" " --> " (prin1-to-string comint-use-prompt-regexp-instead-of-fields) "\n")))
+
+(defun py--report-comint-variable-setting-intern ()
+  (insert (concat "comint-accum-marker" " --> " (prin1-to-string comint-accum-marker) "\n"))
+  (insert (concat "comint-buffer-maximum-size" " --> " (prin1-to-string comint-buffer-maximum-size) "\n"))
+  (insert (concat "comint-completion-addsuffix" " --> " (prin1-to-string comint-completion-addsuffix) "\n"))
+  (insert (concat "comint-completion-autolist" " --> " (prin1-to-string comint-completion-autolist) "\n"))
+  (insert (concat "comint-completion-fignore" " --> " (prin1-to-string comint-completion-fignore) "\n"))
+  (insert (concat "comint-completion-recexact" " --> " (prin1-to-string comint-completion-recexact) "\n"))
+  (insert (concat "comint-delimiter-argument-list" " --> " (prin1-to-string comint-delimiter-argument-list) "\n"))
+  (insert (concat "comint-displayed-dynamic-completions" " --> " (prin1-to-string comint-displayed-dynamic-completions) "\n"))
+  (insert (concat "comint-dynamic-complete-functions" " --> " (prin1-to-string comint-dynamic-complete-functions) "\n"))
+  (insert (concat "comint-dynamic-list-completions-config" " --> " (prin1-to-string comint-dynamic-list-completions-config) "\n"))
+  (insert (concat "comint-eol-on-send" " --> " (prin1-to-string comint-eol-on-send) "\n"))
+  (insert (concat "comint-exec-hook" " --> " (prin1-to-string comint-exec-hook) "\n"))
+  (insert (concat "comint-file-name-chars" " --> " (prin1-to-string comint-file-name-chars) "\n"))
+  (insert (concat "comint-file-name-prefix" " --> " (prin1-to-string comint-file-name-prefix) "\n"))
+  (insert (concat "comint-file-name-quote-list" " --> " (prin1-to-string comint-file-name-quote-list) "\n"))
+  (insert (concat "comint-get-old-input" " --> " (prin1-to-string comint-get-old-input) "\n"))
+  (insert (concat "comint-history-isearch" " --> " (prin1-to-string comint-history-isearch) "\n"))
+  (insert (concat "comint-history-isearch-message-overlay" " --> " (prin1-to-string comint-history-isearch-message-overlay) "\n"))
+  (insert (concat "comint-inhibit-carriage-motion" " --> " (prin1-to-string comint-inhibit-carriage-motion) "\n"))
+  (insert (concat "comint-input-autoexpand" " --> " (prin1-to-string comint-input-autoexpand) "\n"))
+  (insert (concat "comint-input-filter" " --> " (prin1-to-string comint-input-filter) "\n"))
+  (insert (concat "comint-input-filter-functions" " --> " (prin1-to-string comint-input-filter-functions) "\n"))
+  (insert (concat "comint-input-history-ignore" " --> " (prin1-to-string comint-input-history-ignore) "\n"))
+  (insert (concat "comint-input-ignoredups" " --> " (prin1-to-string comint-input-ignoredups) "\n"))
+  ;; (insert (concat "comint-input-ring" " --> " (prin1-to-string comint-input-ring) "\n"))
+  (insert (concat "comint-input-ring-file-name" " --> " (prin1-to-string comint-input-ring-file-name) "\n"))
+  (insert (concat "comint-input-ring-index" " --> " (prin1-to-string comint-input-ring-index) "\n"))
+  (insert (concat "comint-input-ring-separator" " --> " (prin1-to-string comint-input-ring-separator) "\n"))
+  (insert (concat "comint-input-ring-size" " --> " (prin1-to-string comint-input-ring-size) "\n"))
+  (insert (concat "comint-input-sender" " --> " (prin1-to-string comint-input-sender) "\n"))
+  (insert (concat "comint-input-sender-no-newline" " --> " (prin1-to-string comint-input-sender-no-newline) "\n"))
+  (insert (concat "comint-insert-previous-argument-last-index" " --> " (prin1-to-string comint-insert-previous-argument-last-index) "\n"))
+  (insert (concat "comint-insert-previous-argument-last-start-pos" " --> " (prin1-to-string comint-insert-previous-argument-last-start-pos) "\n"))
+  (insert (concat "comint-last-input-end" " --> " (prin1-to-string comint-last-input-end) "\n"))
+  (insert (concat "comint-last-input-start" " --> " (prin1-to-string comint-last-input-start) "\n"))
+  (insert (concat "comint-last-output-start" " --> " (prin1-to-string comint-last-output-start) "\n"))
+  (insert (concat "comint-last-prompt-overlay" " --> " (prin1-to-string comint-last-prompt-overlay) "\n"))
+  (insert (concat "comint-matching-input-from-input-string" " --> " (prin1-to-string comint-matching-input-from-input-string) "\n"))
+  ;; (insert (concat "comint-mode-abbrev-table" " --> " (prin1-to-string comint-mode-abbrev-table) "\n"))
+  (insert (concat "comint-mode-hook" " --> " (prin1-to-string comint-mode-hook) "\n"))
+  ;; (insert (concat "comint-mode-map" " --> " (prin1-to-string comint-mode-map) "\n"))
+  ;; (insert (concat "comint-mode-syntax-table" " --> " (prin1-to-string comint-mode-syntax-table) "\n"))
+  (insert (concat "comint-move-point-for-output" " --> " (prin1-to-string comint-move-point-for-output) "\n"))
+  (insert (concat "comint-output-filter-functions" " --> " (prin1-to-string comint-output-filter-functions) "\n"))
+  (insert (concat "comint-password-prompt-regexp" " --> " (prin1-to-string comint-password-prompt-regexp) "\n"))
+  (insert (concat "comint-preoutput-filter-functions" " --> " (prin1-to-string comint-preoutput-filter-functions) "\n"))
+  (insert (concat "comint-process-echoes" " --> " (prin1-to-string comint-process-echoes) "\n"))
+  (insert (concat "comint-prompt-read-only" " --> " (prin1-to-string comint-prompt-read-only) "\n"))
+  (insert (concat "comint-prompt-regexp" " --> " (prin1-to-string comint-prompt-regexp) "\n"))
+  (insert (concat "comint-ptyp" " --> " (prin1-to-string comint-ptyp) "\n"))
+  (insert (concat "comint-redirect-completed" " --> " (prin1-to-string comint-redirect-completed) "\n"))
+  (insert (concat "comint-redirect-echo-input" " --> " (prin1-to-string comint-redirect-echo-input) "\n"))
+  (insert (concat "comint-redirect-filter-functions" " --> " (prin1-to-string comint-redirect-filter-functions) "\n"))
+  (insert (concat "comint-redirect-finished-regexp" " --> " (prin1-to-string comint-redirect-finished-regexp) "\n"))
+  (insert (concat "comint-redirect-insert-matching-regexp" " --> " (prin1-to-string comint-redirect-insert-matching-regexp) "\n"))
+  (insert (concat "comint-redirect-original-filter-function" " --> " (prin1-to-string comint-redirect-original-filter-function) "\n"))
+  (insert (concat "comint-redirect-original-mode-line-process" " --> " (prin1-to-string comint-redirect-original-mode-line-process) "\n"))
+  (insert (concat "comint-redirect-output-buffer" " --> " (prin1-to-string comint-redirect-output-buffer) "\n"))
+  (insert (concat "comint-redirect-perform-sanity-check" " --> " (prin1-to-string comint-redirect-perform-sanity-check) "\n"))
+  (insert (concat "comint-redirect-subvert-readonly" " --> " (prin1-to-string comint-redirect-subvert-readonly) "\n"))
+  (insert (concat "comint-redirect-verbose" " --> " (prin1-to-string comint-redirect-verbose) "\n"))
+  (insert (concat "comint-save-input-ring-index" " --> " (prin1-to-string comint-save-input-ring-index) "\n"))
+  (insert (concat "comint-scroll-show-maximum-output" " --> " (prin1-to-string comint-scroll-show-maximum-output) "\n"))
+  (insert (concat "comint-scroll-to-bottom-on-input" " --> " (prin1-to-string comint-scroll-to-bottom-on-input) "\n"))
+  (insert (concat "comint-scroll-to-bottom-on-output" " --> " (prin1-to-string comint-scroll-to-bottom-on-output) "\n"))
+  (insert (concat "comint-stored-incomplete-input" " --> " (prin1-to-string comint-stored-incomplete-input) "\n"))
+  (insert (concat "comint-use-prompt-regexp" " --> " (prin1-to-string comint-use-prompt-regexp) "\n"))
+  (insert (concat "comint-use-prompt-regexp-instead-of-fields" " --> " (prin1-to-string comint-use-prompt-regexp-instead-of-fields) "\n")))
+
+(defun py-report-comint-variable-setting ()
+  "Display some comint-mode variables of interest for debugging.
+
+Some vars like comint-mode maps and tables are not displayed here because of its amount.
+
+Typing `q' will close the buffer displayed"
+  (interactive)
+  (let ((help-window-select t))
+    (with-help-window "*Comint variables*"
+      (set-buffer "*Comint variables*")
+      (erase-buffer)
+      (switch-to-buffer (current-buffer))
+      (py--report-comint-variable-setting-intern))))
+
+
+
 
 ;; (require 'info-look)
 ;; The info-look package does not always provide this function (it
